--- a/pub/package.json
+++ b/pub/package.json
@@ -1,12 +1,12 @@
 {
   "author": "Corno",
   "license": "ISC",
-  "description": "functions that can be used by an IDE to support ASTN",
+  "description": "the ASTN parser",
 
   "dependencies": {
     "glo-astn-tokenconsumer": "^0.2.0",
     "glo-pareto-common": "^0.11.0",
-    "pareto-core-lib": "^0.18.0",
+    "pareto-core-lib": "^0.18.1",
     "pareto-core-raw": "^0.7.4",
     "pareto-core-state": "^0.12.0"
   },
